# simplex-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dependency.md
indextools/: CMakeLists.txt  main.cpp
indextools/docs/: README.md  architecture.md  commands.md  protocol.md  schemas.md  server.md
indextools/include/: cache_system.hpp  editor.hpp  lang.hpp  lang_plugin.hpp  logger.hpp  plugin_manager.hpp  schema.hpp  split.hpp  subprocess.hpp  viewer.hpp
indextools/include/indextools/: cache_system.hpp  editor.hpp  lang.hpp  lang_plugin.hpp  plugin_manager.hpp  schema.hpp  utils.hpp  viewer.hpp
indextools/include/indextools/service_command/: file_edit.hpp  service_command.hpp  shell.hpp
indextools/include/service_command/: file_edit.hpp  service_command.hpp  shell.hpp
indextools/languages/: CMakeLists.txt  README.md
indextools/languages/fallback/: CMakeLists.txt
indextools/languages/fallback/include/: fallbacklang.hpp
indextools/languages/fallback/src/: fallbacklang.cpp  fallbacklang_plugin.cpp
indextools/languages/python/: CMakeLists.txt
indextools/languages/python/include/: pythonlang.hpp
indextools/languages/python/src/: pythonlang.cpp  pythonlang_plugin.cpp
indextools/src/: cache_system.cpp  editor.cpp  logger.cpp  plugin_manager.cpp  subprocess.cpp  utils.cpp  viewer.cpp
indextools/test/: CMakeLists.txt  README.md  test_cache_system.cpp  test_editor.cpp  test_fallbacklang.cpp  test_file_edit.cpp  test_glob.cpp  test_lang.cpp  test_levenshtein.cpp  test_logger.cpp  test_plugin_manager.cpp  test_pythonlang.cpp  test_service_command.cpp  test_shell.cpp  test_subprocess.cpp  test_utils.cpp  test_viewer.cpp
languages/: CMakeLists.txt  README.md
languages/fallback/: CMakeLists.txt
languages/fallback/include/fallback/: fallbacklang.hpp
languages/fallback/src/: fallbacklang.cpp  fallbacklang_plugin.cpp
languages/python/: CMakeLists.txt
languages/python/include/python/: pythonlang.hpp
languages/python/src/: pythonlang.cpp  pythonlang_plugin.cpp
languages/test/: CMakeLists.txt  test_fallbacklang.cpp  test_pythonlang.cpp
logging/: CMakeLists.txt  README.md
logging/include/logging/: logger.hpp
logging/src/: logger.cpp
logging/test/: CMakeLists.txt  test_logger.cpp
versioning/: CMakeLists.txt  README.md  version.hpp.in
